# XDF-LSL-replayer

./: .gitignore  CMakeLists.txt  EMG short recording (only ch. 5).xdf  README.md
.github/workflows/: build.yml
resources/: app.rc  resources.qrc
src/: LslReplayEngine.cpp  LslReplayEngine.h  MainWindow.cpp  MainWindow.h  StreamChartView.cpp  StreamChartView.h  StreamSidebar.cpp  StreamSidebar.h  TimelineWidget.cpp  TimelineWidget.h  XdfLoader.cpp  XdfLoader.h  main.cpp
